issue-64 overflow-anchor for window

--- a/demo/styles.css
+++ b/demo/styles.css
@@ -1,5 +1,6 @@
 body {
   line-height: 1.4;
+  overflow-anchor: none;
 }
 
 h1 {
